--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <a href="#"><li>Sign in</li></a>
       </ul>
       <a class="sell-something" href="#">Sell Something</a>
+      <div class="search-icon">
+        <img class="vec1" src="./assets/img/Vector.svg" alt="vector"><img class="vec2" src="./assets/img/Vector (1).svg" alt="vector1">
+      </div>
     </header>
     <section class="location-banner">
       <div class="section-container-left">
@@ -97,7 +100,7 @@
         <p>Buy, sell, rent or lease on just one platform</p>
         <label for="search">
             <input type="text" name="search" id="search" placeholder="Search...">
-            <span class="loop"><img class="vect" src="./assets/img/Vector.svg" alt="vector"><img class="vect1" src="./assets/img/Vector (1).svg" alt="vector1"></span>
+            <div class="loop"><img class="vect" src="./assets/img/Vector.svg" alt="vector"><img class="vect1" src="./assets/img/Vector (1).svg" alt="vector1"></div>
         </label>
       </div>
     </section>
