--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                 </div>
             </div>
             </a>
+            <a href="#">
             <div class="card">
                 <div class="card-img">
                     <span class="vip">VIP TOP+</span>
@@ -145,6 +146,8 @@
                     <p>450 sq.m</p>
                 </div>
             </div>
+            </a>
+            <a href="#">
             <div class="card">
                 <div class="card-img">
                     <span class="vip">VIP TOP+</span>
@@ -163,6 +166,8 @@
                     <p>450 sq.m</p>
                 </div>
             </div>
+        </a>
+        <a href="#">
             <div class="card">
                 <div class="card-img">
                     <span class="vip">VIP TOP+</span>
@@ -181,6 +186,8 @@
                     <p>450 sq.m</p>
                 </div>
             </div>
+        </a>
+        <a href="#">
             <div class="card">
                 <div class="card-img">
                     <span class="vip">VIP TOP+</span>
@@ -199,6 +206,8 @@
                     <p>450 sq.m</p>
                 </div>
             </div>
+        </a>
+            <a href="#">
             <div class="card">
                 <div class="card-img">
                     <span class="vip">VIP TOP+</span>
@@ -217,6 +226,8 @@
                     <p>450 sq.m</p>
                 </div>
             </div>
+        </a>
+        <a href="#">
             <div class="card">
                 <div class="card-img">
                     <span class="vip">VIP TOP+</span>
@@ -235,6 +246,8 @@
                     <p>450 sq.m</p>
                 </div>
             </div>
+        </a>
+        <a href="#">
             <div class="card">
                 <div class="card-img">
                     <span class="vip">VIP TOP+</span>
@@ -254,26 +267,38 @@
                 </div>
             </div>
         </div>
+    </a>
     </main>
     <footer>
-        <div class="footer-top">
-            <ul>
-                <a href="#"><li>Home</li></a>
-                <a href="#"><li>Discover</li></a>
-                <a href="#"><li>Contact us</li></a>
-                <a href="#"><li>Sign in</li></a>
-            </ul>
-            <p>Support@Roberts.com</p>
-            <ul>
-                <a href="#"><li>Facebook</li></a>
-                <a href="#"><li>Instagram</li></a>
-                <a href="#"><li>Youtube</li></a>
-                <a href="#"><li>Twitter</li></a>
-            </ul>
+        <div class="top">
+            <div class="footer-top">
+                <ul>
+                    <a href="#"><li>Home</li></a>
+                    <a href="#"><li>Discover</li></a>
+                    <a href="#"><li>Contact us</li></a>
+                    <a href="#"><li>Sign in</li></a>
+                </ul>
+                <p>Support@Roberts.com</p>
+                <ul>
+                    <a href="#"><li>Facebook</li></a>
+                    <a href="#"><li>Instagram</li></a>
+                    <a href="#"><li>Youtube</li></a>
+                    <a href="#"><li>Twitter</li></a>
+                </ul>
+            </div>
+            <div class="line"></div>
+            <div class="footer-bottom">
+                <p>© 2022 Robert.co.ke Gibraltar</p>
+            </div>
         </div>
-        <div class="line"></div>
-        <div class="footer-bottom">
-            <p>© 2022 Robert.co.ke Gibraltar</p>
+        <div class="bottom">
+            <ul>
+                <li>Home</li>
+                <li>Discover</li>
+                <li>Sell</li>  
+                <li>Message</li>
+                <li>Profile</li>
+            </ul>
         </div>
     </footer>
   </body>
