main page is done finally

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
         <a href="#"><li>Sign in</li></a>
       </ul>
       <a class="sell-something" href="#">Sell Something</a>
-      <div class="search-icon">
-        <img class="vec1" src="./assets/img/Vector.svg" alt="vector"><img class="vec2" src="./assets/img/Vector (1).svg" alt="vector1">
-      </div>
+      <img class="search-icon" src="./assets/img/search-normal.svg" alt="search">
     </header>
     <section class="location-banner">
       <div class="section-container-left">
@@ -100,7 +98,7 @@
         <p>Buy, sell, rent or lease on just one platform</p>
         <label for="search">
             <input type="text" name="search" id="search" placeholder="Search...">
-            <div class="loop"><img class="vect" src="./assets/img/Vector.svg" alt="vector"><img class="vect1" src="./assets/img/Vector (1).svg" alt="vector1"></div>
+            <img class="loop" src="./assets/img/search-normal.svg" alt="search">    
         </label>
       </div>
     </section>
@@ -112,7 +110,7 @@
                 <div class="card-img">
                     <span class="vip">VIP TOP+</span>
                     <img src="./assets/img/Rectangle 541.svg" alt="villa">
-                    <div class="bookmark"><img class="bookm1" src="./assets/img/Vector (2).svg" alt="vector2"><img class="bookm2" src="./assets/img/Vector (3).svg" alt="vector3"></div>
+                    <div class="bookmark"><img src="./assets/img/Frame.svg" alt="frame"></div>
                 </div>
                 <h2>200 Acres Parcel for Sale in Namanga</h2>
                 <p>Kajiado, Namanga</p>
@@ -132,7 +130,7 @@
                 <div class="card-img">
                     <span class="vip">VIP TOP+</span>
                     <img src="./assets/img/Rectangle 425.svg" alt="villa">
-                    <div class="bookmark"><img class="bookm1" src="./assets/img/Vector (2).svg" alt="vector2"><img class="bookm2" src="./assets/img/Vector (3).svg" alt="vector3"></div>
+                    <div class="bookmark"><img src="./assets/img/Frame.svg" alt="frame"></div>
                 </div>
                 <h2>200 Acres Parcel for Sale in Namanga</h2>
                 <p>Kajiado, Namanga</p>
@@ -152,7 +150,7 @@
                 <div class="card-img">
                     <span class="vip">VIP TOP+</span>
                     <img src="./assets/img/Rectangle 431.svg" alt="villa">
-                    <div class="bookmark"><img class="bookm1" src="./assets/img/Vector (2).svg" alt="vector2"><img class="bookm2" src="./assets/img/Vector (3).svg" alt="vector3"></div>
+                    <div class="bookmark"><img src="./assets/img/Frame.svg" alt="frame"></div>
                 </div>
                 <h2>200 Acres Parcel for Sale in Namanga</h2>
                 <p>Kajiado, Namanga</p>
@@ -172,7 +170,7 @@
                 <div class="card-img">
                     <span class="vip">VIP TOP+</span>
                     <img src="./assets/img/Rectangle 428.svg" alt="villa">
-                    <div class="bookmark"><img class="bookm1" src="./assets/img/Vector (2).svg" alt="vector2"><img class="bookm2" src="./assets/img/Vector (3).svg" alt="vector3"></div>
+                    <div class="bookmark"><img src="./assets/img/Frame.svg" alt="frame"></div>
                 </div>
                 <h2>200 Acres Parcel for Sale in Namanga</h2>
                 <p>Kajiado, Namanga</p>
@@ -192,7 +190,7 @@
                 <div class="card-img">
                     <span class="vip">VIP TOP+</span>
                     <img src="./assets/img/Rectangle 545.svg" alt="villa">
-                    <div class="bookmark"><img class="bookm1" src="./assets/img/Vector (2).svg" alt="vector2"><img class="bookm2" src="./assets/img/Vector (3).svg" alt="vector3"></div>
+                    <div class="bookmark"><img src="./assets/img/Frame.svg" alt="frame"></div> 
                 </div>
                 <h2>200 Acres Parcel for Sale in Namanga</h2>
                 <p>Kajiado, Namanga</p>
@@ -212,7 +210,7 @@
                 <div class="card-img">
                     <span class="vip">VIP TOP+</span>
                     <img src="./assets/img/Rectangle 520.svg" alt="villa">
-                    <div class="bookmark"><img class="bookm1" src="./assets/img/Vector (2).svg" alt="vector2"><img class="bookm2" src="./assets/img/Vector (3).svg" alt="vector3"></div>
+                    <div class="bookmark"><img src="./assets/img/Frame.svg" alt="frame"></div>
                 </div>
                 <h2>200 Acres Parcel for Sale in Namanga</h2>
                 <p>Kajiado, Namanga</p>
@@ -232,7 +230,7 @@
                 <div class="card-img">
                     <span class="vip">VIP TOP+</span>
                     <img src="./assets/img/Rectangle 519.svg" alt="villa">
-                    <div class="bookmark"><img class="bookm1" src="./assets/img/Vector (2).svg" alt="vector2"><img class="bookm2" src="./assets/img/Vector (3).svg" alt="vector3"></div>
+                    <div class="bookmark"><img src="./assets/img/Frame.svg" alt="frame"></div>
                 </div>
                 <h2>200 Acres Parcel for Sale in Namanga</h2>
                 <p>Kajiado, Namanga</p>
@@ -252,7 +250,7 @@
                 <div class="card-img">
                     <span class="vip">VIP TOP+</span>
                     <img src="./assets/img/Rectangle 527.svg" alt="villa">
-                    <div class="bookmark"><img class="bookm1" src="./assets/img/Vector (2).svg" alt="vector2"><img class="bookm2" src="./assets/img/Vector (3).svg" alt="vector3"></div>
+                    <div class="bookmark"><img src="./assets/img/Frame.svg" alt="frame"></div>
                 </div>
                 <h2>200 Acres Parcel for Sale in Namanga</h2>
                 <p>Kajiado, Namanga</p>
@@ -293,11 +291,36 @@
         </div>
         <div class="bottom">
             <ul>
-                <li>Home</li>
-                <li>Discover</li>
-                <li>Sell</li>  
-                <li>Message</li>
-                <li>Profile</li>
+                <a href="#">
+                    <span>
+                        <img src="./assets/img/home-2.svg" alt="home">
+                        <li>Home</li>
+                    </span>
+                </a>
+                <a href="#">
+                    <span>
+                        <img src="./assets/img/3dcube.svg" alt="discover">
+                        <li>Discover</li>
+                    </span>
+                </a>
+                <a href="#">
+                <span>
+                    <img class="sell-frame" src="./assets/img/plusframe.svg" alt="sell">
+                    <li>Sell</li>
+                </span>
+            </a>
+                <a href="#">
+                <span>
+                    <img src="./assets/img/message-text.svg" alt="message">
+                    <li>Message</li>
+                </span>
+            </a>
+                <a href="#">
+                <span>
+                    <img src="./assets/img/user.svg" alt="profile">
+                    <li>Profile</li>
+                </span>
+            </a>
             </ul>
         </div>
     </footer>
