--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   </head>
   <body>
     <header>
-      <a href="#"><img src="./assets/img/apartment (1) 1.svg" alt="apartment logo" /></a>
+      <a href="./index.html"><img src="./assets/img/apartment (1) 1.svg" alt="apartment logo" /></a>
       <ul>
-        <a href="#"><li>Home</li></a>
+        <a href="./index.html"><li>Home</li></a>
         <a href="#"><li>Discover</li></a>
         <a href="#"><li>Contact Us</li></a>
         <a href="#"><li>Sign in</li></a>
@@ -271,7 +271,7 @@
         <div class="top">
             <div class="footer-top">
                 <ul>
-                    <a href="#"><li>Home</li></a>
+                    <a href="./index.html"><li>Home</li></a>
                     <a href="#"><li>Discover</li></a>
                     <a href="#"><li>Contact us</li></a>
                     <a href="#"><li>Sign in</li></a>
@@ -291,7 +291,7 @@
         </div>
         <div class="bottom">
             <ul>
-                <a href="#">
+                <a href="./index.html">
                     <span>
                         <img src="./assets/img/home-2.svg" alt="home">
                         <li>Home</li>
