added meta tags

--- a/detail.html
+++ b/detail.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:url"                content="https://sabachilachava.github.io/smartAcademy-midterm/detail.html" />
+    <meta property="og:type"               content="desctiption" />
+    <meta property="og:title"              content="2bdrm Apartment in Yatch, Thindigua/Kasarini for Rent" />
+    <meta property="og:description"        content="Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo, vel fringilla est ullamcorper eget" />
+    <meta property="og:image"              content="https://raw.githubusercontent.com/SabaChilachava/smartAcademy-midterm/7857e9f0d0907a5b43298f61a7a19563e95404c9/assets/img/Rectangle%20431.svg" />
+    <meta name="twitter:card" content="2bdrm Apartment in Yatch, Thindigua/Kasarini for Rent" />
+    <meta name="twitter:site" content="@smartacademy" />
+    <meta name="twitter:creator" content="@SabaChilachava" />
     <link rel="stylesheet" href="./assets/css/font.css" />
     <link rel="stylesheet" href="./assets/css/detail.css" />
     <link rel="shortcut icon" href="./assets/img/apartment (1) 1.svg" type="image/svg" />
