--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:url"                content="https://sabachilachava.github.io/smartAcademy-midterm/detail.html" />
+    <meta property="og:type"               content="Rental" />
+    <meta property="og:title"              content="Rent villa" />
+    <meta property="og:description"        content="How much does culture influence creative thinking?" />
+    <meta property="og:image"              content="https://raw.githubusercontent.com/SabaChilachava/smartAcademy-midterm/7857e9f0d0907a5b43298f61a7a19563e95404c9/assets/img/Rectangle%20400.svg" />
+    <meta name="twitter:card" content="rent" />
+    <meta name="twitter:site" content="@smartacademy" />
+    <meta name="twitter:creator" content="@SabaChilachava" />
     <link rel="stylesheet" href="./assets/css/font.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="shortcut icon" href="./assets/img/apartment (1) 1.svg" type="image/svg" />
-    <title>Document</title>
+    <title>Rent Villas</title>
   </head>
   <body>
     <header>
